# Eurobot-2026-Sim

./: .gitignore  README.md
docker/: Dockerfile  compose.yaml
docker/modules/: install_realsense.sh
src/EurobotField_Sim/sim_desp/: CMakeLists.txt  package.xml
src/EurobotField_Sim/sim_desp/models/field/: model.config  model.sdf
src/EurobotField_Sim/sim_desp/models/field/meshes/: Eurobot2026_field.stl
src/EurobotField_Sim/sim_desp/models/field_image/: model.config  model.sdf
src/EurobotField_Sim/sim_desp/models/field_image/materials/scripts/: field.material
src/EurobotField_Sim/sim_desp/models/my_robot/: model.config  model.sdf
src/EurobotField_Sim/sim_desp/worlds/: Eurobot2026.world
src/EurobotField_Sim/sim_gazebo/: CMakeLists.txt  package.xml
src/EurobotField_Sim/sim_gazebo/launch/: sim_gazebo.launch.py
