<?xml version="1.0"?>
<package format="3">
  <name>sim_desp</name>
  <version>0.0.0</version>
  <description>Simulation for Eurobot 2026 Field.</description>
  <maintainer email="seanchen1117@gmail.com">Sean Chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
